exam/02/05-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: timesheettracking-strip-web
  namespace: timesheet-ns
spec:
  stripPrefix:
    prefixes:
      - /web
